--- a/GrapefruitVideoPlayer/app/build.gradle
+++ b/GrapefruitVideoPlayer/app/build.gradle
@@ -19,12 +19,20 @@ android {
 }
 
 dependencies {
+
+    def room_version = "1.1.1"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+    //Do you really need annotation processor for glide? Think about it later.
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+
     testImplementation 'junit:junit:4.12'
 }
