Replaces loader with architecture components.

--- a/GrapefruitVideoPlayer/app/build.gradle
+++ b/GrapefruitVideoPlayer/app/build.gradle
@@ -20,7 +20,7 @@ android {
 
 dependencies {
 
-    def room_version = "1.1.1"
+    def arch_version = "1.1.1"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
@@ -31,8 +31,11 @@ dependencies {
     //Do you really need annotation processor for glide? Think about it later.
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
-    implementation "android.arch.persistence.room:runtime:$room_version"
-    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    implementation "android.arch.persistence.room:runtime:$arch_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$arch_version"
+
+    implementation "android.arch.lifecycle:extensions:$arch_version"
+    annotationProcessor "android.arch.lifecycle:compiler:$arch_version"
 
     testImplementation 'junit:junit:4.12'
 }
