--- a/GrapefruitVideoPlayer/app/build.gradle
+++ b/GrapefruitVideoPlayer/app/build.gradle
@@ -37,5 +37,7 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:$arch_version"
     annotationProcessor "android.arch.lifecycle:compiler:$arch_version"
 
+    implementation 'com.plattysoft.leonids:LeonidsLib:1.3.2'
+
     testImplementation 'junit:junit:4.12'
 }
