Enables leanback fullscreen mode on landscape orientation.

--- a/GrapefruitVideoPlayer/app/src/main/AndroidManifest.xml
+++ b/GrapefruitVideoPlayer/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
 
         <activity
+            android:configChanges="orientation|screenSize"
             android:name=".activities.VideoPlayerActivity"
             android:parentActivityName=".activities.MainActivity">
 
