--- a/GrapefruitVideoPlayer/app/build.gradle
+++ b/GrapefruitVideoPlayer/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     //Do you really need annotation processor for glide? Think about it later.
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
